# OpenGL-Adventure

./: CMakeLists.txt  setup.py
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt
resource/shader/: crosshair_fragment_shader.glsl  crosshair_vertex_shader.glsl  cube_fragment_shader.glsl  fragment_shader.glsl  lighting_cube_fragment_shader.glsl  lighting_cube_vertex_shader.glsl  line_fragment_shader.glsl  line_vertex_shader.glsl  vertex_shader.glsl
src/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  main.cpp
